--- a/Learn to Code/11 Decisions and Conditions/01.md
+++ b/Learn to Code/11 Decisions and Conditions/01.md
@@ -31,6 +31,10 @@ if (true) {
     console.log("Hello");
 }
 ```
+
+> Addition:  
+> if (0 >|| " " || null ) is "false" as well
+
 # Using Conditions
 
 If statements can help us build very sophisticated apps. But for smarter if statements, we need *smarter conditions*.
