--- a/04 FreeCodeCamp/02 JavaScript Algorithms and Data Structures Certification/02 ES6.MD
+++ b/04 FreeCodeCamp/02 JavaScript Algorithms and Data Structures Certification/02 ES6.MD
@@ -111,3 +111,557 @@ This helps when you accidentally attempt to reassign a variable that is meant to
 
 **Note:** It is common for developers to use uppercase variable identiiers for immutable values and lowercase or camelCase for mutable values (objects and arrays). In a later challenge you will see an example of a lowercase variable identifier being used for an array.
 
+## Mutate an Array Declared with const
+
+The `const` declaration has many use cases in modern JavaScript.
+
+Some developers prefer to assign all their variables using `const` by default, unless they know they will need to reassign the value. Only in that case, they use `let`.
+
+However, it is important to understand that objects (including arrays and functions) assigned to a variable using `const` are still mutable. Using the `const` declaration only prevents reassignement of the variable identifier.
+
+```js
+"use strict";
+const s = [5,6,7];
+s = [1,2,3];        // trows error, trying to assign a const
+s[2] = 45;          // wors just as it would with an array declared with var or let
+console.log(s);     // returns [5,6,45]
+```
+
+As you can see, you can mutate the object `[5,6,7]` itself and the variable `s` will still point to the altered array `[5,6,45]`. Like all arrays, the array elements in `s `are mutable, but because `const` was used, you cannot use the variable identifier `s` to point to a different array using the assignemnt operator.
+
+## Prevent Object Mutation
+
+As seen in the previous challenge, `const` declaration alone doesn't really protect your data from mutation. To ensure your data doesn't change, JavaScript provides a function `Object.freeze` to prevent data mutation.
+
+Once the object is frozen, you can no longer add, update, or delete properties from it.
+
+Any attempt at changing the object will be rejected without an error.
+
+```js
+let obj = {
+    name: "FreeCodeCamp",
+    review: "Awesome"
+};
+Object.Freeze(obj);
+obj.review = "bad";     // will be ignored. Mutation not allowed
+obj.newProp = "Test";   // will be ignored. Mutation not allowed
+console.log(obj);       // {name: "FreeCodeCamp", review:"Awesome"}
+```
+
+## Use Arrow Functions to Write Concise Anonymous Functions 
+
+In JavaScript, we often don't need to name our functions, especially when passing a function as an argument to another function. Instead, we create inline functions. We don't need to name these functions because we do not reuse them anywhere else.
+
+To achieve this, we often use the following syntax:
+```js
+const myFunc = function() {
+    const myVar = "value";
+    return myVar;
+}
+```
+ES6 provides us with the syntactic sugar to not have to write anonymous functions this way.
+Instead, you can use **arrow function syntax**:
+```js
+const myFunc = () => {
+    const myVar = "value";
+    return myVar;
+}
+```
+When there is no function body, and only a return value, arrow function syntax allows you to omit the keyword `return` as well as the brackets surrounding the code. This helps simplify smaller functions into one-line statements:
+```js
+const myFunc = () => "value";
+```
+This code will still return `value` by default.
+
+## Write Arrow functions with Parameters
+
+Just like aregular function, you can pass arguments into an arrow function.
+
+```js
+// doubles input value and returns it
+const doubler = (item) => item * 2;
+```
+If an arrow function has a single argument, the parentheses enclosing the argument may be omitted.
+
+```js
+//the same function, without the argument parentheses
+const dobler = item => item * 2;
+```
+It is possible to pass more than one argument into an arrow function.
+
+```js
+// multiples the first input value by the secound and returns it
+const multiplier = (item, multi) => item * multi;
+```
+
+## Set Default Parameters for Your Functions
+
+In order to help us create more flexible functions, ES6 introduces default parameters for functions.
+
+Check out this code:
+```js
+const greeting = (name = "Anonymous") => "Hello " + name;
+console.log(greeting("John"));       // Hello John
+console.log(greeting());             // Hello Anonymous
+```
+
+The default parameter kicks in when the argument is not specified (it is undefined). As you can see in the example above, the parameter `name` will recieve its default value `"Anonymous"` when you do not provide a value for the parameter. You can add default values for as many parameters as you want.
+
+## Use the Rest Parameter with Function Parameters
+
+In order to help us create more flexible functions, ES6 introduces the **rest parameter** for function parameters. With the rst parameter, you can create functions that take a variable number of arguments. These arguments are stored in an array that can be accessed later from inside the function.
+
+Check out this code:
+```js
+function howMany(...args) {
+    return "You have passed " + args.length + " arguments.";
+}
+console.log(howMany(0,1,2));            // You have passed 3 arguments.
+console.log(howMany("string",null, [1,2,3], {})) // You have passed 4 arguments.
+```
+
+The rest parameter eliminates the need to check the `args` array and allows us to apply `map()`, `filter()` and `reduce()`on the parameters array.
+
+```js
+const sum = (...args) => {
+    return args.reduce((a,b) => a + b, 0);
+}
+console.log(sum(1,2,3)); // 6
+```
+
+## Use the Spread Operator to Evaluate Arrays In-Place
+
+ES6 introduced the *spread operator*, which allows us to expand arrays and other expressions in places where multiple parameters or elements are expected.
+
+The ES5 code below uses `apply()` to compute the maximum value in an array:
+
+```js
+var arr = [6, 89, 3, 45];
+var maximus = Math.max.apply(null, arr); // returns 89
+```
+
+We had to use `Math.max.apply(null, arr)` because `Math.max(arr)` returns `NaN`. `Math.max()` expects comma-separated arguments, but not an array. The spread operator makes this syntax mcuh better to read and maintain.
+
+```js
+const arr = [6, 89, 3, 45];
+const maximus = Math.max(...arr); // returns 89
+```
+
+`...arr` returns an unpacked array. In other words, it *spreads* the array. However, the spread operator only works in-place, like in an argument to a function or in an array literal. The following code will not work:
+```js
+const spreaded = ...arr; // will throw a syntax error
+```
+
+## Use Destructuring Assignment to Extract Values from Objects
+
+*Destructuring assignemnt* is special syntax introduced in ES6, for neatly assigning values taken directly from an object.
+
+Consider the following ES5 code:
+```js
+const user = { name: 'John Doe', age: 34};
+
+const name = user.name; // name = 'John Doe'
+const age = user.age;   // age = 34
+```
+Here's an equivalent assignment statement using the ES6 destructuring syntax:
+```js
+const {name, age} = user; // name = 'John Doe', age = 34
+```
+
+Here, the `name` and `age` variables will be created and assigned the values of their respective values from the `user` object. You can see how much clenaer this is.
+
+You can extract as many or few values from the object as you want.
+
+## Use Destructuring Assignment to Assign Variables from Objects
+
+Destructuring allows you to assign a new variable name when extracting values. You can do this by putting the new name after a colon when assigning the value.
+
+Using the same object from the last example:
+```js
+const user = { name: 'John Doe', age: 34}
+```
+
+Here's how you can give new variable names in the assignment:
+
+```js
+const {name: userName, age: userAge} = user; // userName = 'John Doe', userAge = '34'
+```
+
+You may read it as "get the value of `user.name` and assign it to a new variable named `userName`" and so on.
+
+## Use Destructuring Assignment to Assign Variables from nested Objects
+
+You can use the same principles from the previous two lessons to destructure values from nested objects.
+
+Using an object similar to previous examples:
+
+```js
+const user = {
+    johnDoe: {
+        age: 34,
+        email: 'johnDoe@freeCodeCamp.com'
+    }
+};
+```
+
+Here's how to extract the values of object properties and assign them to variables with the same name:
+
+```js
+const { johnDoe: { age, email}} = user;
+```
+And here's how you can assign an objects properties' value to variables with different names:
+```js
+const { johnDoe: {age: userAge, email: userEmail }} = user;
+```
+
+```js
+const {today: {low: todayLow, high: todayHigh}} = LOCAL_FORECAST;
+```
+
+## Use Destructuring Assignment to Assign Variables from Arrays
+
+ES6 makes destructuring arrays s easy as destructuring objects.
+
+One key difference between the spread operator and array destructuing is that the spread operator unpacks all contents of an array into a comma-separated list.
+
+Consequently, you cannot pick or choose which elements you want to assign to variables.
+
+Destructuring an array lets us do exactly that:
+```js
+const [a,b] = [1,2,3,4,5,6];
+console.log(a,b) = 1,2
+```
+The variable `a` is assigned the first value of the array, and `b` is assigned the second value of  the array. We can also access the value at any index in an array with destructuring by using comas to reach the desired index:
+```js
+const [a,b,,,c] = [1,2,3,4,5,6];
+console.log(a,b,c); // 1,2, 5
+```
+### Excercise
+Use desctructuring assignment to swap the values of `a` and `b`so that `a` recieves the value stored in `b`, and `b`recieves the value stored in `a`.
+```js
+let a = 8, b = 6;
+// change code below this line
+[b,a] = [a,b]; // Do not try to re-declare a or b while destructuring as they are already declared in the first let statement.
+// change code above this line
+console.log(a); // should be 6
+console.log(b); // should be 8
+```
+
+## Use Destructuring Assignment with the Rest Parameter to Reassign Array Elements
+
+In some situations involving array destructuring, we might want to cllect the rest of the elements into a separate array.
+
+The result is similar to `Array.prototype.slice()`, as shown below:
+```js
+const [a,b, ...arr] = [1,2,3,4,5,6,7];
+console.log(a,b);   // 1, 2
+console.log(arr);   // [3, 4, 5, 6, 7];
+```
+
+Variables `a` and `b`take the frist and second values from the array. After that, because of rest parameters's presence, `arr` gets rest of the values in the form of an array. 
+The rest element only works correctly as the last variable in the list. As in, you cannot use the rest parameter to catch a subarray that leaves out last element of the original array.
+
+### Excercice
+use destructuring assignment with the rest parameter to perform an effective `Array.prototype.slice()` so that `arr` is a sub-array of the original array `source` with the frist two elements omitted.
+
+```js
+const source = [1,2,3,4,5,6,7,8,9,10];
+function removeFirstTwo(list) {
+  "use strict";
+  // change code below this line
+  const [a, b, ...arr] = list; // change this
+  // change code above this line
+  return arr;
+}
+const arr = removeFirstTwo(source);
+console.log(arr); // should be [3,4,5,6,7,8,9,10]
+console.log(source); // should be [1,2,3,4,5,6,7,8,9,10];
+```
+
+## Use Destructuring Assignemnt to Pass an Object as a Function's Parameter
+
+In some cases, you can destructure the object in a function argument itself.
+
+Consider the code below:
+```js
+const profileUpdate = (profileData) => {
+    const { name, age, nationality, location } = profileData;
+    // do something with these variables
+}
+```
+This effectively destructures the object sent into the function. This can also be done in-place:
+```js
+const profileUpdate = ({name, age, nationality, location}) => {
+    /* Do something with these fields */
+}
+```
+
+This removes some extra lines and makes our code look neat. This has the added benefit of not having to manipulate an entire object in a function - only the fields that are needed are copied inside the function.
+
+### Excercise
+Use descturcturing assingment with the argument to the function `half` to send only `max` and `min` inside the function.
+
+```JS
+const stats = {
+    max: 56.78,
+    standard_deviation: 4.34,
+    median: 34,54,
+    mode: 34.54,
+    min: -0.75,
+    average: 35.85
+};
+
+// change code below this line
+const half = ({max, min}) => (max+min)/2.0;
+// change code above this line
+
+console.log(stats);         // should be object
+console.log(half(stats));   // should be 28.015
+```
+
+## Create Strings using Template Literals
+
+A new feature of ES6 is template literal.
+
+This is a special type of string that makes creating complex strings easier.
+
+Template literals allow you to create multi-line strings and to use string interpolation features to create strings.
+
+Consider the code:
+```js
+const person = {
+    name: "Zodiac Hasbro",
+    age: 56
+};
+
+// Template literal with multi-line and string interpolation
+const greeting = `Hello, my name is ${person.name}!
+I am ${person.age} years old.`;
+
+console.log(greeting); //prints the following:
+// Hello, my name is Zodiac Hasbro!
+// I am 56 years onld.
+```
+
+A lot of things happend there.
+
+Firstly, the example uses backticks (``` ` ```), not quotes (`"` or `'`), to wrap the string.
+
+Secoundly, notice that the string is multi-line, both in the code and the output. This saves inserting `\n` within strings.
+
+The `${variable}` syntax used above is a placeholder.
+
+Basically, you won't have to use concatenation with the `+` operator anymore. 
+
+To add variables to strings, you just drop the variable in a template string and wrap it with `${` and `}`.
+
+Similarly, you can include other expressions in your string literal, for example `${a + b}`. This new way of creating strings gives you more flexibility to create robust strings.
+
+### Example
+
+```js
+//obj
+const result = {
+    success: ["max-length","no-amd", "prefer-arrow-functions"],
+    failure: ["no-var", "var-on-top", "linebreaks"],
+    skipped: ["id-blacklist", "no-dup-keys"]
+}
+// function to make list with Template Literal
+function makeList(arr){
+    "use strict";
+
+    const resultDisplayArray = [];
+    for (let i = 0; i < arr.length; i++) {
+        resultDisplayArray.push(`<li class="text-warning">${arr[i]}</li>`);
+    }
+
+    return resultDisplayArray;
+}
+
+const resultDisplayArray = makeList(result.failure);
+// will return: 
+// [`<li class="text-warining">"no-var"</li>`, `<li class="test-warning">"var-on-top"</li>`], `<li class="text-warning">"linebreaks"</li>`]
+```
+
+## Write Concise Object Literal Declarations Using Object Property Shorthand
+
+ES6 adds some nice support for easily defining object literals.
+
+Consider the following code:
+```js
+const getMousePosition = (x,y) => ({
+    x: x,
+    y: y
+});
+```
+` getMousePosition` is a simple function that returns an object containing two propeties. 
+ES6 provides the syntactic sugar to eliminate the redundancy of having a to write `x: x`. 
+You can simply write `x` once, and it will be converted to `x: x` (or something equivalent) under the hood.
+
+Here is the same function from above rewritten to use this new syntax:
+```js
+const getMousePosition = (x,y) => ({x,y});
+```
+
+### Example
+
+```js
+const createPerson = (name, age, gender) => {
+    "use strict";
+    return {name, age, gender};
+}
+console.log(createPerson("Zodiac Hasbro", 56, "male"));
+// returns a proper object
+```
+
+## Wrtie Concise Declarative Functions with ES6
+
+When defining functions within objects in ES5, we have to use the keyword `functions`as follows:
+```js
+const person = {
+    name: "Taylor",
+    sayHello: function() {return `Hello! My name is ${this.name}.`;}
+};
+```
+
+With ES6, you can remove the `function` keyword and colon altogether when defining functions in objects. Here's an example of this syntax:
+```js
+const person = {
+    name: "Taylor",
+    sayHello() {return `Hello! My name is ${this.name}.`}
+}
+```
+
+## Use class Syntax to Define a Constructor Function
+
+ES6 provides a new syntax to create objects, using the **class** keyword.
+
+It should be noted that the `class` syntax is jsut syntax, not a full-fledged class-based implementation of an object-oriented paradigm, unlike in languages such as Java, Python, Ruby, etc.
+
+in ES5, we usually define a constructor function and use the `new` keyword to instantiate an object.
+
+```js
+var SpaceShuttle = function(targetPlanet) {
+    this.targetPlanet = targetPlanet;
+}
+var zeus = new SpaceShuttle('Jupiter');
+```
+
+The `class` syntax simply replaces the constructor function creation:
+
+```js
+class SpaceShuttle {
+    constructor(targetPlanet) {
+        this.targetPlanet = targetPlanet;
+    }
+}
+const zeus = new SpaceShuttle('Jupiter');
+```
+
+It hsould be noted that the `class` keyword declares a new function, to which a constructor is added. This constructor is invoked when `new` is called to create a new object.
+
+**Notes:**
+
+* UpperCamelCase should be used by convetion for ES6 class names, as in SpaceShuttle used above.
+
+* The constructor method is a special method for creating and initializing an object created with a class. You will learn more about it in the Object Oriented Programming section of the JavaScript Algorithms And Data Structures Certification.
+
+### Example
+
+```js
+class Vegetable {
+    constructor(name) {
+        this.name = name;
+    }
+}
+
+const carrot = new Vegetable("carrot");
+console.log(carrot);
+console.log(carrot.name);
+```
+
+## Use getters and setters to Control Access to an Object
+
+You can obtain values from an object and set the value of a property within an object.
+
+These are classically called *getters* and *setters*.
+
+Getter functions are ment to simply return (get) the value of an object's private variable to the user without the user directly accessing the private variable.
+
+Setter functions are meant to modify (set) the value of an object's private variable based on the value passed into the setter function. 
+
+This change could involve calculations, or even overwriting the previous value completely.
+
+```js
+class Book {
+    constructor(author) {
+        this._author = author;
+    }
+    //getter
+    get writer() {
+        return this._author;
+    }
+    //setter
+    set writer(updated Author) {
+        this._author = updatedAuthor;
+    }
+}
+
+const lol = new Book("anonymous");
+console.log(lol.writer);        // anonymous
+lol.writer = "wut";
+console.log(lol.writer);        // wut
+```
+
+Notice the syntax used to invoke the getter and setter.
+They do not even look like functions.
+
+Getters and setters are important because they hide internal implementation details.
+
+**Note**: It is convention to precede the name of a private variable with an undescore(`_`). However, the practice itself does not make a variable private.
+
+### Example
+
+Use the `class` keyword to create a Thermostat class.
+
+The constructor accepts a Fahrenheit temperature.
+
+Now create a `getter` and a `setter` in the class, to pbtain the temperature in Celsius.
+
+Remember that `C = 5/9 * (F - 32)` and `F = C *9.0 / 5 + 32`, where F is the value of temperature in Fahrenheit and `C` is the value of tthe same temperature in Celsius.
+
+**Note**: When you implement this, you will track the temperature inside the class in one scale, either Fahrenheit or Celsius.
+
+This is the power of a getter and a setter. You are creating an API for another user, who can get the correct result regardless of which one you track.
+
+In other words, you are abstracting implementation details from the user.
+
+```js
+class Thermostat {
+    constructor(temp) {
+        this._temp = temp;
+    }
+    //getter
+    get temperature() {
+        return this.fToC(this._temp);
+    }
+    //setter
+    set temperature(newTemp) {
+        this._temp = this.cToF(newTemp);
+    }
+    // cToF and fToC
+    cToF(c) {
+        return c * 9.0 / 5 + 32;
+    }
+    fToC(f) {
+        return 5/9 * (f - 32);
+    }
+}
+
+//new obj called thermos via class Thermostat
+const thermos = new Thermostat(76); 
+let temp = thermos.temperature;     // 24.44 in C
+thermos.temperature = 26;
+temp = thermos.temperature;         // 26 in C
+```
+
