finished regular expressions

--- a/04 FreeCodeCamp/02 JavaScript Algorithms and Data Structures Certification/02 ES6.MD
+++ b/04 FreeCodeCamp/02 JavaScript Algorithms and Data Structures Certification/02 ES6.MD
@@ -766,4 +766,100 @@ Aditionally, you cannot use `export default` with `var`, `let` or `const`.
 
 ## Import a Default Export
 
-In the last challenge, you learned about `export default` and its uses. To import a default export, you need to use a different `import` syntax
+In the last challenge, you learned about `export default` and its uses. To import a default export, you need to use a different `import` syntax. In the following example, `add` is the default export of the `math-functions.js` file.
+
+Here is how to import it:
+```js
+import add from "./math-functions.js";
+```
+The syntax differs in one key place.
+The imported value, `add`, is not surrounded by curly braches (`{}`).
+
+`add` here is simply a variable name for whatever the default export of the `math_functions.js` file is. You can use any name here when importing a default.
+
+## Create a JavaScript Promise
+
+A promise in JavaScript is exactly what it sound like - you use it to make a promise to do something, usually asynchronously.
+
+When the task completes, you either fulfill your promise or fail to do so.
+
+`Promise` is a constructor function, so you need to use the `new` keyword to create one. It takes a function, as its argument, with two parameters - `resolve` and `reject`.
+
+These are methods used to determine the outcome of the promise.
+
+The syntax looks like this:
+
+```js
+const myPromise = new Promise((resolve, reject) => {
+
+};
+```
+
+### Example
+```js
+//create a promise(object)
+let promiseToCleanTheRoom = new Promise(function(resolve, reject){
+
+    let isClean = true;
+
+    if(isClean) {
+        resolve('Clean');
+    } else {
+        reject('not Clean');
+    }
+});
+// to call the promise
+promiseToCleanTheRoom.then(function(result){console.log('the room is ' + result)})
+                    .catch(function(result){console.log('the room is ' + result);});
+```
+
+## Complete a Promise with resolve and reject
+
+A promise has three states: `pending`, `fullfilled`, and `rejected`. The promise you created in the last challenge is forever stuck in the `pending` state because you did not add a way to complete the promise.
+
+The `resolve` and `reject` parameters given to the promise argument are used to do this.
+
+`resolve` is used when you want your promise to socceed, and `reject` is used when you want it to fail.
+
+These are methods that take an argument, as seen below.
+
+```js
+const myPromise = new Promise((reject, resolve) => {
+    if (condition here) {
+        resolve("Promise was fullfilled");
+    } else {
+        reject("Promise was rejected");
+    }
+});
+```
+The example above uses strings for the argument of these functions, but it can really be anything. 
+
+Often, it might be an Object, that you would use data from, to put on your website or elsewhere.
+
+## Handle a Fulfilled Promise with then
+
+Promises are most useful when you have a process that takes an unkown amount of time in your code (i.e. someting asynchronous), often a server request. When you make a server request it takes some amount of time, and afterit completes you usually want to do something with the response from the server. This can be acheived by usign the `then` method.
+
+ The `then` method is executed immediately afte ryour promise is fulfilled with `resolve`. Here's an example:
+
+ ```js
+ myPromise.then(result => {
+     // do something with the result
+ });
+ ```
+
+ `result` comes from the argument given to the `resolve` method.
+
+ ## Handle a Rejected Promise with catch
+
+ `catch` is the method used when your promise has been rejected. It is executed immediately after a promise' `reject` method is called.
+ Here's the syntax:
+```js
+myPromise.catch(error => {
+    // do something with the error.
+});
+```
+`error` is the argument passed into the `reject` method.
+
+**Note**: the `then` and `catch` methods can be chained to the promise declaration if you choose.
+
