--- a/04 FreeCodeCamp/02 JavaScript Algorithms and Data Structures Certification/02 ES6.MD
+++ b/04 FreeCodeCamp/02 JavaScript Algorithms and Data Structures Certification/02 ES6.MD
@@ -1,4 +1,45 @@
 # ES6
+1. [ES6](#es6)
+   1. [Introduction to ES6](#introduction-to-es6)
+   2. [Explore Differences between the var and let Keywords](#explore-differences-between-the-var-and-let-keywords)
+   3. [Compare Scopes of the var and let Keywords](#compare-scopes-of-the-var-and-let-keywords)
+   4. [Declare a Read-Only Variable with the const Keyword](#declare-a-read-only-variable-with-the-const-keyword)
+   5. [Mutate an Array Declared with const](#mutate-an-array-declared-with-const)
+   6. [Prevent Object Mutation](#prevent-object-mutation)
+   7. [Use Arrow Functions to Write Concise Anonymous Functions](#use-arrow-functions-to-write-concise-anonymous-functions)
+   8. [Write Arrow functions with Parameters](#write-arrow-functions-with-parameters)
+   9. [Set Default Parameters for Your Functions](#set-default-parameters-for-your-functions)
+   10. [Use the Rest Parameter with Function Parameters](#use-the-rest-parameter-with-function-parameters)
+   11. [Use the Spread Operator to Evaluate Arrays In-Place](#use-the-spread-operator-to-evaluate-arrays-in-place)
+   12. [Use Destructuring Assignment to Extract Values from Objects](#use-destructuring-assignment-to-extract-values-from-objects)
+   13. [Use Destructuring Assignment to Assign Variables from Objects](#use-destructuring-assignment-to-assign-variables-from-objects)
+   14. [Use Destructuring Assignment to Assign Variables from nested Objects](#use-destructuring-assignment-to-assign-variables-from-nested-objects)
+   15. [Use Destructuring Assignment to Assign Variables from Arrays](#use-destructuring-assignment-to-assign-variables-from-arrays)
+      1. [Excercise](#excercise)
+   16. [Use Destructuring Assignment with the Rest Parameter to Reassign Array Elements](#use-destructuring-assignment-with-the-rest-parameter-to-reassign-array-elements)
+      1. [Excercice](#excercice)
+   17. [Use Destructuring Assignemnt to Pass an Object as a Function's Parameter](#use-destructuring-assignemnt-to-pass-an-object-as-a-functions-parameter)
+      1. [Excercise](#excercise-1)
+   18. [Create Strings using Template Literals](#create-strings-using-template-literals)
+      1. [Example](#example)
+   19. [Write Concise Object Literal Declarations Using Object Property Shorthand](#write-concise-object-literal-declarations-using-object-property-shorthand)
+      1. [Example](#example-1)
+   20. [Wrtie Concise Declarative Functions with ES6](#wrtie-concise-declarative-functions-with-es6)
+   21. [Use class Syntax to Define a Constructor Function](#use-class-syntax-to-define-a-constructor-function)
+      1. [Example](#example-2)
+   22. [Use getters and setters to Control Access to an Object](#use-getters-and-setters-to-control-access-to-an-object)
+      1. [Example](#example-3)
+   23. [Create a module Script](#create-a-module-script)
+   24. [Use export to Share a Code Block](#use-export-to-share-a-code-block)
+   25. [Reuse Javascript Code Using import](#reuse-javascript-code-using-import)
+   26. [Use * to Import Everything from a File](#use--to-import-everything-from-a-file)
+   27. [Create an Export Fallback with export default](#create-an-export-fallback-with-export-default)
+   28. [Import a Default Export](#import-a-default-export)
+   29. [Create a JavaScript Promise](#create-a-javascript-promise)
+      1. [Example](#example-4)
+   30. [Complete a Promise with resolve and reject](#complete-a-promise-with-resolve-and-reject)
+   31. [Handle a Fulfilled Promise with then](#handle-a-fulfilled-promise-with-then)
+   32. [Handle a Rejected Promise with catch](#handle-a-rejected-promise-with-catch)
 
 ## Introduction to ES6
 
