--- a/04 FreeCodeCamp/02 JavaScript Algorithms and Data Structures Certification/02 ES6.MD
+++ b/04 FreeCodeCamp/02 JavaScript Algorithms and Data Structures Certification/02 ES6.MD
@@ -15,11 +15,11 @@
    13. [Use Destructuring Assignment to Assign Variables from Objects](#use-destructuring-assignment-to-assign-variables-from-objects)
    14. [Use Destructuring Assignment to Assign Variables from nested Objects](#use-destructuring-assignment-to-assign-variables-from-nested-objects)
    15. [Use Destructuring Assignment to Assign Variables from Arrays](#use-destructuring-assignment-to-assign-variables-from-arrays)
-      1. [Excercise](#excercise)
+      1. [Exercise](#Exercise)
    16. [Use Destructuring Assignment with the Rest Parameter to Reassign Array Elements](#use-destructuring-assignment-with-the-rest-parameter-to-reassign-array-elements)
       1. [Excercice](#excercice)
    17. [Use Destructuring Assignemnt to Pass an Object as a Function's Parameter](#use-destructuring-assignemnt-to-pass-an-object-as-a-functions-parameter)
-      1. [Excercise](#excercise-1)
+      1. [Exercise](#Exercise-1)
    18. [Create Strings using Template Literals](#create-strings-using-template-literals)
       1. [Example](#example)
    19. [Write Concise Object Literal Declarations Using Object Property Shorthand](#write-concise-object-literal-declarations-using-object-property-shorthand)
@@ -377,7 +377,7 @@ The variable `a` is assigned the first value of the array, and `b` is assigned t
 const [a,b,,,c] = [1,2,3,4,5,6];
 console.log(a,b,c); // 1,2, 5
 ```
-### Excercise
+### Exercise
 Use desctructuring assignment to swap the values of `a` and `b`so that `a` recieves the value stored in `b`, and `b`recieves the value stored in `a`.
 ```js
 let a = 8, b = 6;
@@ -439,7 +439,7 @@ const profileUpdate = ({name, age, nationality, location}) => {
 
 This removes some extra lines and makes our code look neat. This has the added benefit of not having to manipulate an entire object in a function - only the fields that are needed are copied inside the function.
 
-### Excercise
+### Exercise
 Use descturcturing assingment with the argument to the function `half` to send only `max` and `min` inside the function.
 
 ```JS
